[package]
name = "llmgateway-rs"
version = "1.0.0"
edition = "2021"
authors = ["JSLEEKR <93jslee@gmail.com>"]
description = "High-performance LLM API gateway proxy in Rust — route, cache, rate-limit, and track costs across multiple LLM providers"
license = "MIT"
repository = "https://github.com/JSLEEKR/llmgateway-rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
http = "1"
http-body-util = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Hashing
sha2 = "0.10"

# LRU cache
lru = "0.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
bytes = "1"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
